syntax = "proto3";

package deltran.ledger.v1;

option go_package = "github.com/deltran/pb/ledger/v1;ledgerv1";

import "google/protobuf/timestamp.proto";
import "payment.proto";

// LedgerService manages the append-only event log
service LedgerService {
  // Append a new event to the ledger
  rpc AppendEvent(AppendEventRequest) returns (AppendEventResponse);

  // Get payment state by ID
  rpc GetPaymentState(GetPaymentStateRequest) returns (GetPaymentStateResponse);

  // Get events for a payment
  rpc GetPaymentEvents(GetPaymentEventsRequest) returns (GetPaymentEventsResponse);

  // Finalize a block
  rpc FinalizeBlock(FinalizeBlockRequest) returns (FinalizeBlockResponse);

  // Get current Merkle root
  rpc GetMerkleRoot(GetMerkleRootRequest) returns (GetMerkleRootResponse);

  // Create snapshot
  rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);

  // Restore from snapshot
  rpc RestoreSnapshot(RestoreSnapshotRequest) returns (RestoreSnapshotResponse);

  // Get ledger statistics
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

// AppendEventRequest adds a new event
message AppendEventRequest {
  string payment_id = 1;
  deltran.payment.v1.EventType event_type = 2;
  string amount = 3;
  string currency = 4;
  string debtor_account = 5;
  string creditor_account = 6;

  // Metadata
  map<string, string> metadata = 7;

  // Optional: previous event ID for validation
  string previous_event_id = 8;
}

// AppendEventResponse returns event details
message AppendEventResponse {
  string event_id = 1;
  string payment_id = 2;
  int64 timestamp_nanos = 3;
  bytes signature = 4;
  string block_id = 5; // null if not yet finalized
}

// GetPaymentStateRequest queries current state
message GetPaymentStateRequest {
  string payment_id = 1;
}

// GetPaymentStateResponse returns derived state
message GetPaymentStateResponse {
  PaymentState state = 1;
}

// PaymentState is derived from events
message PaymentState {
  string payment_id = 1;
  deltran.payment.v1.PaymentStatus status = 2;
  string amount = 3;
  string currency = 4;
  string debtor_account = 5;
  string creditor_account = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;

  // Event IDs for audit trail
  repeated string event_ids = 9;

  // Current Merkle proof (optional)
  MerkleProof merkle_proof = 10;
}

// GetPaymentEventsRequest queries event history
message GetPaymentEventsRequest {
  string payment_id = 1;

  // Optional: pagination
  int32 offset = 2;
  int32 limit = 3;
}

// GetPaymentEventsResponse returns events
message GetPaymentEventsResponse {
  repeated deltran.payment.v1.PaymentEvent events = 1;
  int32 total_count = 2;
}

// FinalizeBlockRequest creates a new block
message FinalizeBlockRequest {
  uint64 block_height = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Proposer signature (from consensus)
  bytes proposer_signature = 3;
}

// FinalizeBlockResponse returns block details
message FinalizeBlockResponse {
  string block_id = 1;
  uint64 block_height = 2;
  int32 event_count = 3;
  bytes merkle_root = 4;
  bytes block_hash = 5;
  google.protobuf.Timestamp created_at = 6;
}

// GetMerkleRootRequest gets current root
message GetMerkleRootRequest {
  // Optional: specific block height
  uint64 block_height = 1;
}

// GetMerkleRootResponse returns root hash
message GetMerkleRootResponse {
  bytes merkle_root = 1;
  uint64 block_height = 2;
}

// MerkleProof proves inclusion
message MerkleProof {
  string event_id = 1;
  bytes event_hash = 2;
  repeated bytes proof_hashes = 3; // Sibling hashes
  uint32 index = 4; // Position in tree
  bytes root = 5; // Merkle root
}

// Block represents finalized events
message Block {
  string block_id = 1;
  uint64 block_height = 2;
  bytes merkle_root = 3;
  bytes previous_block_hash = 4;
  bytes block_hash = 5;
  int32 event_count = 6;
  google.protobuf.Timestamp created_at = 7;

  // Consensus proof
  bytes proposer_signature = 8;
  repeated ValidatorSignature validator_signatures = 9;
}

// ValidatorSignature for consensus
message ValidatorSignature {
  string validator_id = 1;
  bytes public_key = 2;
  bytes signature = 3;
}

// CreateSnapshotRequest triggers snapshot
message CreateSnapshotRequest {
  uint64 block_height = 1;
  bool compress = 2;
}

// CreateSnapshotResponse returns snapshot info
message CreateSnapshotResponse {
  string snapshot_id = 1;
  uint64 block_height = 2;
  int64 size_bytes = 3;
  string storage_location = 4; // S3 URL, etc.
  google.protobuf.Timestamp created_at = 5;
}

// RestoreSnapshotRequest restores from snapshot
message RestoreSnapshotRequest {
  string snapshot_id = 1;
}

// RestoreSnapshotResponse confirms restore
message RestoreSnapshotResponse {
  bool success = 1;
  uint64 restored_block_height = 2;
  int64 events_restored = 3;
  google.protobuf.Timestamp restored_at = 4;
}

// GetStatsRequest queries ledger stats
message GetStatsRequest {}

// GetStatsResponse returns statistics
message GetStatsResponse {
  int64 total_events = 1;
  int64 total_blocks = 2;
  int64 total_payments = 3;
  int64 unblocked_events = 4;
  uint64 current_block_height = 5;
  bytes current_merkle_root = 6;

  // Status distribution
  map<string, int64> payment_status_counts = 7;

  // Performance metrics
  int64 append_rate_per_second = 8;
  int64 p95_append_latency_ms = 9;
  int64 p99_append_latency_ms = 10;

  // Storage metrics
  int64 rocksdb_size_bytes = 11;
  int64 compaction_pending_bytes = 12;
}

// Invariant violation (should never happen)
message InvariantViolation {
  string violation_type = 1;
  string payment_id = 2;
  string event_id = 3;
  string description = 4;
  google.protobuf.Timestamp detected_at = 5;
  bytes proof = 6; // Evidence of violation
}